--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -5,12 +5,12 @@ $white: rgb(255, 255, 255) !default;
 // Specific Variables Only For this project
 
 /// Primary Color ///
-$very-dark-magenta: rgb(80,32,80);
-$soft-pink: rgb(238,104,164);
+$very-dark-magenta: rgb(80, 32, 80);
+$soft-pink: rgb(238, 104, 164);
 
 /// Neutral Color ///
-$dark-grayish-magenta: rgb(147,123,146);
-$light-grayish-magenta: rgb(247,242,247);
+$dark-grayish-magenta: rgb(147, 123, 146);
+$light-grayish-magenta: rgb(247, 242, 247);
 
 // Breakpoints
 $breakpoints-up: (
