--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,261 +1,4 @@
-@charset 'utf-8';
-@use './abstracts' as *;
-@use 'vendor';
-
-$-body-font-size: rem(15);
-
-/* RESET */
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  padding: rem(55) rem(20);
-  font-family: 'Spartan', sans-serif;
-  font-size: $-body-font-size;
-}
-
-main {
-  margin: 0 auto;
-  max-width: 79em;
-
-  @include breakpoint-up('medium') {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-}
-
-aside,
-section {
-  margin: rem(50) 0;
-}
-
-h1,
-h2,
-h3,
-p {
-  margin: rem(30) 0;
-}
-
-p,
-q {
-  line-height: 1.6;
-}
-
-q::before {
-  content: '';
-}
-
-q::after {
-  content: '';
-}
-
-/// UTILITIES ///
-.round-img {
-  border-radius: 50%;
-}
-
-/// BG PATTERN ///
-.bg-pattern-top {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: url('../images/bg-pattern-top-mobile.svg') no-repeat;
-  height: rem(232);
-  width: rem(374);
-
-  @include breakpoint-up('medium') {
-    background: url('../images/bg-pattern-top-desktop.svg') no-repeat;
-    height: rem(362);
-    width: rem(584);
-  }
-}
-
-.bg-pattern-bottom {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background: url('../images/bg-pattern-bottom-mobile.svg') no-repeat;
-  height: rem(503);
-  width: rem(375);
-
-  @include breakpoint-up('small') {
-    display: none;
-  }
-
-  @include breakpoint-up('medium') {
-    display: block;
-    background: url('../images/bg-pattern-bottom-desktop.svg')
-      no-repeat;
-    height: rem(673);
-    width: rem(1085);
-  }
-}
-
-/// USERS LOVE ///
-.users-love {
-  text-align: center;
-
-  @include breakpoint-up('medium') {
-    flex-basis: 40%;
-    text-align: left;
-  }
-
-  &__heading {
-    line-height: 1;
-    letter-spacing: -0.02em;
-    color: $very-dark-magenta;
-    font-size: rem(35);
-
-    @include breakpoint-up('medium') {
-      margin-top: 0;
-      font-size: rem(50);
-    }
-  }
-
-  &__paragraph {
-    color: $dark-grayish-magenta;
-  }
-}
-
-/// RATING ///
-.rating {
-  @include breakpoint-up('medium') {
-    flex-basis: 40%;
-  }
-
-  &__review {
-    color: $very-dark-magenta;
-    font-weight: 700;
-  }
-}
-
-.rating__box {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin: rem(15) 0;
-  border-radius: 0.5em;
-  background-color: $light-grayish-magenta;
-  padding: 1.25em;
-  text-align: center;
-
-  @include breakpoint-up('medium') {
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1.25em 3em;
-    text-align: right;
-
-    &:first-of-type {
-      left: -#{rem(120)};
-    }
-
-    &:nth-of-type(2) {
-      left: -#{rem(60)};
-    }
-  }
-}
-
-.stars {
-  display: flex;
-  justify-content: center;
-  gap: 0.5em;
-  margin-bottom: rem(15);
-
-  @supports not (gap: 0.5em) {
-    &__icon-star:not(:last-child) {
-      margin-right: 0.5em;
-    }
-  }
-
-  @include breakpoint-up('medium') {
-    justify-content: flex-start;
-    margin-bottom: 0;
-  }
-}
-
-/// TESTIMONIALS ///
-.testimonials {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-
-  @supports not (gap: 1em) {
-    &__box:not(:last-child) {
-      margin-bottom: 1em;
-    }
-  }
-
-  @include breakpoint-up('medium') {
-    flex-direction: row;
-
-    @supports not (gap: 1em) {
-      &__box:not(:last-child) {
-        margin-right: 1em;
-      }
-    }
-  }
-
-  &__box {
-    position: relative;
-    background-color: $very-dark-magenta;
-    border-radius: 0.5em;
-    padding: 3em 2em;
-    color: $white;
-  }
-
-  &__person {
-    margin-bottom: rem(30);
-  }
-}
-
-@include breakpoint-up('medium') {
-  .testimonials__box {
-    &:nth-of-type(2) {
-      top: rem(20);
-    }
-
-    &:last-of-type {
-      top: rem(40);
-    }
-  }
-}
-
-.person {
-  display: flex;
-  align-items: center;
-  gap: 1.5em;
-
-  @supports not (gap: 1.5em) {
-    &__img {
-      margin-right: 1.5em;
-    }
-  }
-
-  &__img {
-    height: rem(40);
-    width: rem(40);
-  }
-
-  &__name,
-  &__status {
-    font-size: rem(15);
-  }
-
-  &__status {
-    margin-top: rem(10);
-    color: $soft-pink;
-    font-weight: 500;
-  }
-}
+@charset "utf-8";
+@use "vendors";
+@use "base";
+@use "layout";
