--- a/scss/abstracts/_functions.scss
+++ b/scss/abstracts/_functions.scss
@@ -1,32 +1,23 @@
-@use 'sass:math';
-@use 'variables' as *;
+@use "sass:math";
+@use "variables"as *;
 
 // Set base font size
 @function base($base-font-size) {
-  @if unitless($base-font-size) or math.unit($base-font-size) != '%' {
+  @if unitless($base-font-size) or math.unit($base-font-size) !="%" {
     @error "Sorry, this #{$default-html-font-size} must have percentage unit!";
-  } @else {
-    @return math.div($base-font-size, 100%) * 16;
   }
+
+  @return math.div($base-font-size, 100%) * 16;
 }
 
 // Change px to rem
-@function rem($value, $round-up: false, $round-down: false) {
+@function rem($value) {
   @if unitless($value) {
     $base-size: base($default-html-font-size);
-
-    @if $round-down == false and $round-up == false {
-      @return math.div($value, $base-size) * 1rem;
-    } @else if $round-down == true and $round-up == false {
-      @return math.floor(math.div($value, $base-size) * 1rem);
-    } @else if $round-up == true and $round-down == false {
-      @return math.ceil(math.div($value, $base-size) * 1rem);
-    } @else if $round-up == true and $round-down == true {
-      @error "Sorry, I can't round up and round down your number at the same time. Please choose one or change me!";
-    }
-  } @else {
-    @error "Sorry, this '#{$value}' must have not any unit";
+    @return math.div($value, $base-size) * 1rem;
   }
+
+  @error "Sorry, this '#{$value}' must have not any unit";
 }
 
 // Lighten the color slightly
@@ -41,9 +32,9 @@
 
 // Set color based on background color
 @function set-color($color) {
-  @if lightness($color) > 60 {
-    @return $dark;
-  } @else {
-    @return $white;
+  @if lightness($color)>60 {
+    @return $black;
   }
+
+  @return $white;
 }
