--- a/css/style.css
+++ b/css/style.css
@@ -384,6 +384,8 @@ html {
 }
 
 body {
+  background: top left 100% no-repeat, bottom right 100% no-repeat;
+  background-image: url("../images/bg-pattern-top-mobile.svg"), url("../images/bg-pattern-bottom-mobile.svg");
   font-family: "Spartan", sans-serif;
 }
 
