--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -55,6 +55,10 @@ body {
   font-family: "Spartan", sans-serif;
 }
 
+main {
+  padding: rem(64) rem(24);
+}
+
 h1 {
   margin: rem(10) 0;
   line-height: 1.4;
