--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,7 @@ body {
   background: top left 100% no-repeat, bottom right 100% no-repeat;
   background-image: url("../images/bg-pattern-top-mobile.svg"), url("../images/bg-pattern-bottom-mobile.svg");
   font-family: "Spartan", sans-serif;
+  font-size: 0.9375rem;
 }
 
 main {
