--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -53,6 +53,7 @@ body {
   background: top left 100% no-repeat, bottom right 100% no-repeat;
   background-image: url("../images/bg-pattern-top-mobile.svg"), url("../images/bg-pattern-bottom-mobile.svg");
   font-family: "Spartan", sans-serif;
+  font-size: rem(15);
 }
 
 main {
