--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -52,6 +52,7 @@ html {
 body {
   background: top left 100% no-repeat, bottom right 100% no-repeat;
   background-image: url("../images/bg-pattern-top-mobile.svg"), url("../images/bg-pattern-bottom-mobile.svg");
+  color: $very-dark-magenta;
   font-family: "Spartan", sans-serif;
   font-size: rem(15);
 }
