Added block comments

--- a/css/style.css
+++ b/css/style.css
@@ -415,10 +415,16 @@ img {
   height: auto;
 }
 
+/*------------------------------------*\
+  #TESTIMONIAL
+\*------------------------------------*/
 .testimonial__wrapper {
   text-align: center;
 }
 
+/*------------------------------------*\
+  #RATING
+\*------------------------------------*/
 .rating {
   margin: 2.5rem 0;
 }
