--- a/scss/layout/_rating.scss
+++ b/scss/layout/_rating.scss
@@ -1,5 +1,9 @@
 @use "../abstracts" as *;
 
+/*------------------------------------*\
+  #RATING
+\*------------------------------------*/
+
 $gap: rem(8);
 
 .rating {
