--- a/scss/layout/_testimonial.scss
+++ b/scss/layout/_testimonial.scss
@@ -1,5 +1,9 @@
 @use "../abstracts" as *;
 
+/*------------------------------------*\
+  #TESTIMONIAL
+\*------------------------------------*/
+
 .testimonial__wrapper {
   text-align: center;
 }
