--- a/scss/layout/_testimonial.scss
+++ b/scss/layout/_testimonial.scss
@@ -27,12 +27,11 @@
 .testimonial__photo {
   margin-right: rem(24);
   border-radius: 50%;
-  height: rem(48);
   width: rem(48);
+  height: rem(48);
 }
 
-.testimonial__name,
-.testimonial__status {
+.testimonial__name, .testimonial__status {
   margin: 0;
   font-size: rem(14);
 }
