--- a/css/style.css
+++ b/css/style.css
@@ -445,12 +445,11 @@ img {
 .testimonial__photo {
   margin-right: 1.5rem;
   border-radius: 50%;
-  height: 3rem;
   width: 3rem;
+  height: 3rem;
 }
 
-.testimonial__name,
-.testimonial__status {
+.testimonial__name, .testimonial__status {
   margin: 0;
   font-size: 0.875rem;
 }
@@ -479,8 +478,8 @@ img {
 
 .rating__item {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
   margin: 0.9375rem 0;
   border-radius: 0.5em;
   background-color: #f7f2f7;
