--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -53,12 +53,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: 
-    top left/100% no-repeat, 
-    bottom right/100% no-repeat;
-  background-image: 
-    url("../images/bg-pattern-top-mobile.svg"), 
-    url("../images/bg-pattern-bottom-mobile.svg");
+  background: top left/100% no-repeat,
+  bottom right/100% no-repeat;
+  background-image: url("../images/bg-pattern-top-mobile.svg"),
+  url("../images/bg-pattern-bottom-mobile.svg");
   min-height: 100vh;
   color: $very-dark-magenta;
   font-family: "Spartan", sans-serif;
