Added max-width to the testimonial

--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,11 @@ img {
 /*------------------------------------*\
   #TESTIMONIAL
 \*------------------------------------*/
+.testimonial {
+  margin: 0 auto;
+  max-width: 31.25rem;
+}
+
 .testimonial__wrapper {
   text-align: center;
 }
