--- a/scss/layout/_testimonial.scss
+++ b/scss/layout/_testimonial.scss
@@ -4,6 +4,11 @@
   #TESTIMONIAL
 \*------------------------------------*/
 
+.testimonial {
+  margin: 0 auto;
+  max-width: rem(500);
+}
+
 .testimonial__wrapper {
   text-align: center;
 }
