Changed the CSS snippet for shorthand property

--- a/css/style.css
+++ b/css/style.css
@@ -387,12 +387,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: top left/100% no-repeat, bottom right/100% no-repeat;
+  background: top left no-repeat, bottom right no-repeat;
   background-image: url("../images/bg-pattern-top-mobile.svg"), url("../images/bg-pattern-bottom-mobile.svg");
   min-height: 100vh;
   color: #502050;
   font-family: "Spartan", sans-serif;
   font-size: 0.9375rem;
+}
+@media screen and (min-width: 37.5em) {
+  body {
+    background-image: url("../images/bg-pattern-top-desktop.svg"), url("../images/bg-pattern-bottom-desktop.svg");
+  }
 }
 
 main {
