--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -53,14 +53,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: top left/100% no-repeat,
-  bottom right/100% no-repeat;
+  background: top left no-repeat,
+  bottom right no-repeat;
   background-image: url("../images/bg-pattern-top-mobile.svg"),
   url("../images/bg-pattern-bottom-mobile.svg");
   min-height: 100vh;
   color: $very-dark-magenta;
   font-family: "Spartan", sans-serif;
   font-size: rem(15);
+  
+  @include breakpoint-up("tiny") {
+    background-image: url("../images/bg-pattern-top-desktop.svg"),
+    url("../images/bg-pattern-bottom-desktop.svg");
+  }
 }
 
 main {
