--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -17,9 +17,11 @@ $pure-white: hsl(0, 0%, 100%);
 // Note: If you user font-size setting is 16px, then this 'em' is equal to this in 'px'
 $breakpoints-up: (
   "tiny": 37.5em, // 600px
-  "very-small": 61.25em // 980px
+  "very-small": 61.25em, // 980px
+  "small": 80em // 1280px
 );
 $breakpoints-down: (
   "tiny": 37.4375em, // 599px
-  "very-small": 61.1875em // 979px
+  "very-small": 61.1875em, // 979px
+  "small": 79.9375em // 1279px
 );
